# lona-chartjs

./: .gitignore  MANIFEST.in  Makefile  README.rst  REQUIREMENTS.dev.txt  package-lock.json  package.json  pyproject.toml  setup.cfg  setup.py  test_script.py
lona_chartjs/: __init__.py  html.py  widgets.py
lona_chartjs/static/: chartjs-widgets.js
lona_chartjs/static/lona-chartjs/: chartjs-widgets.js
